# urban-ascent

./: .babelrc  .eslintrc.js  .gitignore  Cargo.toml  Info.plist  Makefile  package-lock.json  package.json  webpack.config.js
assets/models/terrain/: Mountains.gltf
js/: index.js  setup.js
js/models/: ToolMode.js
js/services/: GlobalEventManager.js  GlobalState.js  globalSaveManager.js
js/ui/: App.js  index.js
js/ui/atoms/: IconButton.js  InputField.js  TextButton.js
js/ui/molecules/: FullMenu.js  SlideUpContainer.js  ToggleIconButton.js
js/ui/objects/: DayNightButton.js  PausePlayButton.js
js/ui/organisms/: BaseStartMenu.js  BottomNavBar.js  DayNightButton.js  LeftInfoBar.js  MainGameUILayout.js  NewGameMenu.js  PausePlayButton.js  StartMenu.js  StraightRoadButton.js  TopNavBar.js
js/ui/store/: bottomToolbar.js  entities.js  game.js  index.js  startMenu.js  store.js  toolbar.js
js/utils/: colors.js
js/world/: World.js  index.js
js/world/components/: Building.js  camera.js  clouds.js  cube.js  grid.js  lights.js  meshGroup.js  paths.js  performance.js  road.js  scene.js  terrain.js
js/world/event-handlers/: building.js  index.js  roadCreation.js  scene.js  terrain.js
src/: cameras.rs  controls.rs  lib.rs  lights.rs  main.rs  manager.rs  pan_orbit_camera.rs  particles.rs  paths.rs  person.rs  physics.rs  region.rs  terrain.rs  tools.rs  urban_ascent.rs  utils.rs  world.rs
src/database/: database.rs  mod.rs  saves.rs
src/fly_camera/: cam2d.rs  fly_camera.rs  mod.rs
src/render/: mod.rs  post_processing.rs
src/save/: mod.rs  utils.rs
src/setup/: cameras.rs  controls.rs  mod.rs  particles.rs
src/simulation/: mod.rs  path.rs  person.rs  resources.rs  terrain.rs  time.rs
src/tools/: mod.rs  paths.rs
src/ui/: config.rs  main_menu.rs  mod.rs
static/: index.html  main.css
(+12 files in other folders)
