[package]
name = "urban_ascent"
description = "A city builder game. Built with Bevy."
version = "0.1.0"
repository = "https://github.com/azillion/urban-ascent"
authors = ["Alexander Zillion <alex@alex.zillion.com>"]
tags = ["game", "city-builder", "bevy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.rapier3d]
opt-level = 3

[dependencies]
# remove dynamic_linking feature when releasing
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
bevy_atmosphere = "0.6.0"
# bevy = { version = "0.10.1" }
bevy_editor_pls = "0.4.0"
bevy_hanabi = "0.6.2"
bevy_mod_picking = "0.13.0"
bevy_rapier3d = "0.21.0"
noise = "0.8.2"
pathfinding = "4.3.0"
rand = "0.8.5"
serde = "1.0.164"
serde_json = "1.0.99"
